# HacknarokX2026QuantumTransfer

./: .gitignore  API_DEPLOYMENT_DOCS.md  CMakeLists.txt  QuantumCircuit.hpp  QuantumCircut.h  README.md  alice.cpp  app.py  arm_build.sh  bb84.hpp  bob.cpp  crypto.hpp  eve.cpp  generate_docs.py  key.cpp  key.h  package-lock.json  python_wrapper.py
fake_win/: winsock2.h  ws2tcpip.h
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  BB84Docs.jsx  Case.jsx  CryptoDocs.jsx  Docs.css  Docs.jsx  DocsOverview.jsx  MLKEMDocs.jsx  QuantumCircuitDocs.jsx  Simulation.css  Simulation.jsx  main.jsx
frontend/src/cases/: CaseFive.css  CaseFive.jsx  CaseFour.css  CaseFour.jsx  CaseOne.css  CaseOne.jsx  CaseThree.css  CaseThree.jsx  CaseTwo.css  CaseTwo.jsx
